SERVER-35615 Validate isMaster response before calling validateHost hook