src/mongo/client/async_client.cpp
@@ -180,12 +180,12 @@ Future<void> AsyncDBClient::initWireVersion(const std::string& appName,
 
     return _call(requestMsg).then([this, requestObj, hook, clkSource, start](Message response) {
         auto cmdReply = rpc::makeReply(&response);
+        _parseIsMasterResponse(requestObj, cmdReply);
         if (hook) {
             auto millis = duration_cast<Milliseconds>(clkSource->now() - start);
             executor::RemoteCommandResponse cmdResp(*cmdReply, millis);
             uassertStatusOK(hook->validateHost(_peer, requestObj, std::move(cmdResp)));
         }
-        _parseIsMasterResponse(requestObj, cmdReply);
     });
 }
 
